fix: keep icon alt visible in menu items

--- a/views/default/navigation/menu/site.css
+++ b/views/default/navigation/menu/site.css
@@ -113,6 +113,20 @@ html[class*=mm-wrapper_sidebar-collapsed-] {
 			}
 		}
 	}
+	
+	&:not(.mm-menu_multiline) {
+		.mm-listitem {
+			.elgg-anchor {
+				display: flex;
+				
+				.elgg-anchor-label {
+					white-space:nowrap;
+					overflow: hidden;
+					text-overflow: ellipsis;
+				}
+			}		
+		}
+	}
 }
 
 .mm-page {
